# federation-git

./: README.md  pyproject.toml
src/federation_git/: policy_image.py  push_pull.py
